# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("libwms_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "include/window_snapshot",
    "//utils/system/safwk/native/include",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//foundation/windowmanager/interfaces/innerkits/dm",
    "//foundation/windowmanager/wm/include",
    "//foundation/windowmanager/utils/include",
    "//foundation/windowmanager/dm/include",
    "//foundation/windowmanager/dmserver/include",
  ]
}

ohos_shared_library("libwms") {
  sources = [
    "../wm/src/zidl/window_manager_agent_proxy.cpp",
    "../wm/src/zidl/window_proxy.cpp",
    "src/avoid_area_controller.cpp",
    "src/display_group_controller.cpp",
    "src/display_group_info.cpp",
    "src/drag_controller.cpp",
    "src/freeze_controller.cpp",
    "src/inner_window.cpp",
    "src/input_window_monitor.cpp",
    "src/minimize_app.cpp",
    "src/remote_animation.cpp",
    "src/starting_window.cpp",
    "src/window_controller.cpp",
    "src/window_dumper.cpp",
    "src/window_inner_manager.cpp",
    "src/window_layout_policy.cpp",
    "src/window_layout_policy_cascade.cpp",
    "src/window_layout_policy_tile.cpp",
    "src/window_manager_agent_controller.cpp",
    "src/window_manager_config.cpp",
    "src/window_manager_service.cpp",
    "src/window_node.cpp",
    "src/window_node_container.cpp",
    "src/window_pair.cpp",
    "src/window_root.cpp",
    "src/window_snapshot/snapshot_controller.cpp",
    "src/window_snapshot/snapshot_proxy.cpp",
    "src/window_snapshot/snapshot_stub.cpp",
    "src/window_task_looper.cpp",
    "src/window_zorder_policy.cpp",
    "src/zidl/window_manager_stub.cpp",
  ]

  configs = [ ":libwms_config" ]

  deps = [
    "//foundation/arkui/ace_engine/interfaces/inner_api/ui_service_manager:ui_service_mgr",
    "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics:2d_graphics",
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client",
    "//foundation/windowmanager/dm:libdm",
    "//foundation/windowmanager/dmserver:libdms",
    "//foundation/windowmanager/utils:libwmutil",
    "//foundation/windowmanager/wm:libwm",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "display_manager_native:displaymgr",
    "graphic_standard:surface",
    "graphic_standard:window_animation",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "input:libmmi-client",
    "ipc:ipc_core",
    "power_manager_native:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  if (is_standard_system) {
    external_deps += [ "init:libbegetutil" ]
  } else {
    external_deps += [ "init_lite:libbegetutil" ]
  }

  part_name = "window_manager"
  subsystem_name = "window"
}
