# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Build rosenwmtest {{{
config("rosenwmtest_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "frameworks",

    # for abilityContext
    "//foundation/aafwk/standard/frameworks/kits/ability/ability_runtime/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//base/global/resmgr_standard/interfaces/innerkits/include",
    "//third_party/node/deps/icu-small/source/common",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",

    # RSSurface
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
    "//foundation/graphic/standard/rosen/modules/render_service_base:librender_service_base",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

ohos_executable("rosenwmtest") {
  install_enable = false

  sources = [
    "frameworks/inative_test.cpp",
    "frameworks/main.cpp",
    "test/dm_native_test.cpp",
    "test/wm_native_test.cpp",
  ]

  configs = [ ":rosenwmtest_config" ]

  deps = [
    "//foundation/graphic/standard:libvsync_client",
    "//foundation/graphic/standard:libwmclient",
    "//foundation/graphic/standard:libwmservice",
    "//foundation/windowmanager/utils:libwmutil",
    "//foundation/windowmanager/wm:libwm",
    "//foundation/windowmanager/wmserver:libwms",
    "//third_party/zlib:libz",

    # ace
    # native value
    "//foundation/ace/ace_engine/interfaces/innerkits/ace:ace_uicontent",
    "//foundation/ace/napi:ace_napi",
  ]

  external_deps = [ "samgr_standard:samgr_proxy" ]

  part_name = "window_manager"
  subsystem_name = "window"
}

## Build rosenwmtest }}}

group("test") {
  testonly = true

  deps = [ "unittest:unittest" ]
}
