# Copyright (C) 2022-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libwindow_extension_client_private_config") {
  visibility = [ ":*" ]
  visibility += [ "//foundation/arkui/ace_engine/frameworks/core/components_ng/test/pattern/ability_component/*" ]

  include_dirs = [
    "include",
    "include/zidl",
    "../window_extension/include/zidl",
  ]
}

config("libextension_connection_public_config") {
  include_dirs = [ "../../interfaces/innerkits/extension" ]
}

ohos_shared_library("libwindow_extension_client") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = true
  }
  install_enable = true
  sources = [
    "../window_extension/src/zidl/window_extension_proxy.cpp",
    "src/window_extension_client_stub_impl.cpp",
    "src/window_extension_connection.cpp",
    "src/zidl/window_extension_client_stub.cpp",
  ]

  configs = [
    ":libwindow_extension_client_private_config",
    "../../resources/config/build:coverage_flags",
  ]

  public_configs = [ ":libextension_connection_public_config" ]

  deps = [
    "../../window_scene/session:scene_session",
    "../../wm:libwm",
  ]

  external_deps = [
    "ability_base:session_info",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "input:libmmi-client",
    "ipc:ipc_single",
  ]

  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "window_manager"
  subsystem_name = "window"
}
